deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: af-hub
  labels:
    app.kubernetes.io/name: af-hub
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: af-hub
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
